# custom_minecraft

./: CMakeLists.txt  readme.md
headers/io/: file-loader.h  input.h
headers/main/: app.h
headers/math/: math-util.h  transform.h
headers/shader/: camera.h  model.h  shader.h  texture.h  vao.h
headers/structure/: hash-map.h  interval-tree.h  linked-list.h
headers/text/: font-generator.h  font.h  text-renderer.h  text.h
headers/world/: block.h  chunk.h  world-generator.h  world-renderer.h  world.h
libs/cglm-master/: CMakeLists.txt  meson.build
libs/cglm-master/test/: CMakeLists.txt
libs/glad/: CMakeLists.txt  glad.c  glad.h
res/: StaticShader.fs  StaticShader.vs  TextShader.fs  TextShader.vs  mc.fnt
src/io/: file-loader.c  input.c
src/main/: app.c
src/math/: math-util.c  transform.c
src/shader/: camera.c  model.c  shader.c  texture.c  vao.c
src/structure/: hash-map.c  interval-tree.c  linked-list.c
src/text/: font-generator.c  font.c  text-renderer.c  text.c
src/world/: block.c  chunk.c  world-generator.c  world-renderer.c  world.c
